<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bookmanagerv1.CreateBookActivity" >

    <EditText
        android:id="@+id/editText1CreateBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Text1CreateBook"
        android:inputType="text" >

        <requestFocus android:layout_width="wrap_content" />
    </EditText>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1CreateBook"
        android:layout_below="@+id/editText1CreateBook"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editText2CreateBook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Text2CreateBook" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentdesc"
            android:cropToPadding="true"
            android:onClick="selectDate"
            android:src="@drawable/ic_datepicker" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/LinearLayout1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/EditText01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/PersonName" >
            </EditText>

            <Button
                android:id="@+id/Button01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Add" >
            </Button>
        </LinearLayout>

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="246dp" >
        </ListView>
        
        
        <Button
             android:id="@+id/CreateActivitybutton1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Create" />
        
        

    </LinearLayout>

</RelativeLayout>